--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
   <meta charset='utf-8'>
 
   <title>christopherdebeer/colourtool @ GitHub</title>
-
   <style type="text/css">
     body {
       margin-top: 1.0em;
       background-color: #5f10ad;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
+      color: #93A1A1;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #a0ef52; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; color: #FDF6E3; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #a0ef52; }
-    h3 { text-align: center; color: #a0ef52; }
-    a { color: #a0ef52; }
+    h2 { font-size: 1.5em; color: #FDF6E3; }
+    h3 { text-align: center; color: #FDF6E3; }
+    a { color: #EFAA50; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
