pages updates pages colour

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #5f10ad;
+      background-color: #022B36;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #93A1A1;
     }
