pages updates pages colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     h1 { font-size: 3.8em; color: #FDF6E3; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
+    h1 a { text-decoration: none; color: #FDF6E3; }
     h2 { font-size: 1.5em; color: #FDF6E3; }
     h3 { text-align: center; color: #FDF6E3; }
     a { color: #EFAA50; }
