--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
     </div>
 
     <p>This tool lists all the colours mentioned within the stylesheets and style elements that are present on the current page. Its intended use is to facilitate checking of CSS for unintended colour variations/duplications.</p><h2>Install</h2>
-<p>To install this bookmarklet tool, create a bookmark with the code below as the link/location. Clicking on the bookmark will launch colourTool on whichever site/page you are on at the time.</p>
-<h2>Authors</h2>
-<p>Christopher de Beer (christopherdebeer@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Christopher de Beer (christopherdebeer@gmail.com)<br/>      </p>
+<p>To install this bookmarklet tool, either drag the following link: <a href="javascript:(function(){window.colBase='https://github.com/christopherdebeer/colourtool/raw/master/';var%20a=document.getElementsByTagName('head')[0],b=document.createElement('script');b.type='text/javascript';b.src=colBase+'coltool.js?'+Math.floor(Math.random()*99999);a.appendChild(b);})();%20void%200">colourTool</a> to your bookmarks, or create a bookmark with the code below as the link/location. Clicking on the bookmark will launch colourTool on whichever site/page you are on at the time.</p>
+<p><pre>javascript:(function(){window.colBase='https://github.com/christopherdebeer/colourtool/raw/master/';var%20a=document.getElementsByTagName('head')[0],b=document.createElement('script');b.type='text/javascript';b.src=colBase+'coltool.js?'+Math.floor(Math.random()*99999);a.appendChild(b);})();%20void%200</pre></p>
+<h2>Contributors</h2>
+<p>Christopher de Beer &amp; Brian Coit<br/><br/>      </p>
 
 
     <h2>Download</h2>
